added About Me and Contact Me sections, formatted general layout of index.html and style.css

--- a/index.html
+++ b/index.html
@@ -26,7 +26,15 @@
             <img src="images/search-engine-optimization.jpg" alt="Search Engine Optimization mind map in a notebook on a desk" class="float-left" />
             <h2>About Me</h2>
             <p>
-                The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
+                My name is Catherine Smith, and I am an emerging full-stack web developer currently compeleted the University of Richmond's 
+                Coding Boot Camp. as well as a recent graduate of the MSc program in Information and Library Studies at the University of Strathclyde 
+                in Glasgow. I decided to become a web developer because it's a face-paced, challenging, creative career path with opportunites to grow as a person 
+                and professional, and there is more flexibility in this sector than many others.
+            </p>
+            </p>
+                I teach group fitness classes (Les Mills' BodyPump, Core, and BodyFlow, as well as MOSSA's Group Power and Group Blast). 
+                I enjoy studying new subjects, drinking tea, spending time with friends and family, watching LOTR, singing, baking, reading books, and 
+                listening to audiobooks (particularly if they are narrated by Richard Armitage, Jim Dale, or Stephen Fry)!
             </p>
         </section>
         <section id="online-reputation-management" class="body-background">
@@ -35,20 +43,18 @@
             <p>
                 <ul>
                     <li>
-                        <a href="insert_link_here">Placehodler Project 1</a>
-                        <!-- shoudl this be homework assignment 1???˜ -->
+                        <a href="insert_link_here">Placeholder Project 1</a>
+                        <!-- should this be homework assignment 1???˜ -->
                     </li>
                     <li>
-                        <a href="insert_link_here">Placehodler Project 2</a>
+                        <a href="insert_link_here">Placeholder Project 2</a>
                     </li>
                     <li>
-                        <a href="insert_link_here">Placehodler Project 3</a>
+                        <a href="insert_link_here">Placeholder Project 3</a>
                     </li>
                     <li>
-                        <a href="insert_link_here">Placehodler Project 4</a>
+                        <a href="insert_link_here">Placeholder Project 4</a>
                     </li>
-        
-        
                 </ul>           
             </p>
         </section>
@@ -58,13 +64,16 @@
 
     <footer class="footer">
         <h2>Contact Me</h2>
-        <ul>
+        <ul> 
+            <!-- add in little emojis or something here to make it cuter/more interesting -->
             <li>Phone: +1 (804) 929-7812</li>
             <li>Email: catsmith24601@gmail.com</li>
             <li>
                 <a href="https://www.linkedin.com/in/catherine-smith-491b62206/">Click here to find me on Linkedin.</a>
             </li>
-
+            <li>
+                <a href="https://github.com/crsmith01?tab=repositories">GitHub</a>
+            </li>
         </ul>
     </footer>
 </body>
