added images folder, changed colors, added ids, added links

--- a/index.html
+++ b/index.html
@@ -11,19 +11,17 @@
 
 <body>
     <header class="header">
-        <h1>Catherine Smith's Portfolio</h1>
+        <h1>Catherine Smith</h1>
         <!-- <nav class="float-right"> update with actual image (?) links  -->
-            <a href="#search-engine-optimization">About Me</a>
-            <a href="#online-reputation-management">Work</a>
-            <a href="#social-media-marketing">Contact Me</a>
+            <a href="#about-me">About Me</a>
+            <a href="#portfolio">Portfolio</a>
+            <a href="#contact">Contact</a>
         </nav>
     </header> 
 
-    <div class="hero"></div>
-
     <main class="content">
-        <section id="search-engine-optimization" class="body-background">
-            <img src="images/search-engine-optimization.jpg" alt="Search Engine Optimization mind map in a notebook on a desk" class="float-left" />
+        <section id="about-me" class="body-background">
+            <img src="images/catherine_headshot_sunken_garden.png" alt="Catherine Smith headshot in Sunken Gardens at William & Mary" class="float-left" />
             <h2>About Me</h2>
             <p>
                 My name is Catherine Smith, and I am an emerging full-stack web developer currently compeleted the University of Richmond's 
@@ -37,23 +35,27 @@
                 listening to audiobooks (particularly if they are narrated by Richard Armitage, Jim Dale, or Stephen Fry)!
             </p>
         </section>
-        <section id="online-reputation-management" class="body-background">
+        <section id="portfolio" class="body-background">
             <img src="images/online-reputation-management.jpg" alt="Laptop with Reputation chart on screen" class="float-right" />
             <h2>Work</h2>
             <p>
                 <ul>
                     <li>
-                        <a href="insert_link_here">Placeholder Project 1</a>
+                        <a href="images/placeholder-image.png">Placeholder Project 1</a>
+                        <img src="images/placeholder-image.png" alt="Placeholder Image" />
                         <!-- should this be homework assignment 1???˜ -->
                     </li>
                     <li>
-                        <a href="insert_link_here">Placeholder Project 2</a>
+                        <a href="images/placeholder-image2.png">Placeholder Project 2</a>
+                        <img src="images/placeholder-image2.png" alt="Placeholder Image" />
                     </li>
                     <li>
-                        <a href="insert_link_here">Placeholder Project 3</a>
+                        <a href="images/placeholder-image3.png">Placeholder Project 3</a>
+                        <img src="images/placeholder-image3.png" alt="Placeholder Image" />
                     </li>
                     <li>
-                        <a href="insert_link_here">Placeholder Project 4</a>
+                        <a href="images/placeholder-image4.png">Placeholder Project 4</a>
+                        <img src="images/placeholder-image4.png" alt="Placeholder Image" />
                     </li>
                 </ul>           
             </p>
@@ -62,14 +64,14 @@
 
 
 
-    <footer class="footer">
+    <footer class="footer" id="contact">
         <h2>Contact Me</h2>
         <ul> 
             <!-- add in little emojis or something here to make it cuter/more interesting -->
             <li>Phone: +1 (804) 929-7812</li>
             <li>Email: catsmith24601@gmail.com</li>
             <li>
-                <a href="https://www.linkedin.com/in/catherine-smith-491b62206/">Click here to find me on Linkedin.</a>
+                <a href="https://www.linkedin.com/in/catherine-smith-491b62206/">Linkedin</a>
             </li>
             <li>
                 <a href="https://github.com/crsmith01?tab=repositories">GitHub</a>
