updated README.md to be more specific and better formatted

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header class="header">
         <h1>Catherine Smith</h1>
-        <!-- <nav class="float-right"> update with actual image (?) links  -->
+        <!-- <nav class="float-right"> update with actual links  -->
             <a href="#about-me">About Me</a>
             <a href="#portfolio">Portfolio</a>
             <a href="#contact">Contact</a>
@@ -27,7 +27,7 @@
                 My name is Catherine Smith, and I am an emerging full-stack web developer currently compeleted the University of Richmond's 
                 Coding Boot Camp. as well as a recent graduate of the MSc program in Information and Library Studies at the University of Strathclyde 
                 in Glasgow. I decided to become a web developer because it's a face-paced, challenging, creative career path with opportunites to grow as a person 
-                and professional, and there is more flexibility in this sector than many others.
+                and professional.
             </p>
             </p>
                 I teach group fitness classes (Les Mills' BodyPump, Core, and BodyFlow, as well as MOSSA's Group Power and Group Blast). 
@@ -37,7 +37,7 @@
         </section>
         <section id="portfolio" class="body-background">
             <img src="images/online-reputation-management.jpg" alt="Laptop with Reputation chart on screen" class="float-right" />
-            <h2>Work</h2>
+            <h2>Portfolio</h2>
             <p>
                 <ul>
                     <li>
