--- a/index.html
+++ b/index.html
@@ -19,46 +19,45 @@
         </nav>
     </header> 
 
+    <div class="hero"></div>
+
     <main class="content">
         <section id="about-me" class="body-background">
-            <img src="images/catherine_headshot_sunken_garden.png" alt="Catherine Smith headshot in Sunken Gardens at William & Mary" class="float-left" />
+            <img src="images/catherine_headshot_sunken_garden.png" alt="Catherine Smith headshot in Sunken Gardens at William & Mary" class="float-left" class="profile-photo"/>
             <h2>About Me</h2>
             <p>
                 My name is Catherine Smith, and I am an emerging full-stack web developer currently compeleted the University of Richmond's 
                 Coding Boot Camp. as well as a recent graduate of the MSc program in Information and Library Studies at the University of Strathclyde 
                 in Glasgow. I decided to become a web developer because it's a face-paced, challenging, creative career path with opportunites to grow as a person 
-                and professional.
+                and professional.  
+
             </p>
-            </p>
-                I teach group fitness classes (Les Mills' BodyPump, Core, and BodyFlow, as well as MOSSA's Group Power and Group Blast). 
-                I enjoy studying new subjects, drinking tea, spending time with friends and family, watching LOTR, singing, baking, reading books, and 
-                listening to audiobooks (particularly if they are narrated by Richard Armitage, Jim Dale, or Stephen Fry)!
+            <p>  
+                While volunteering time as a Library Ambassador at Earl Gregg Swem Library, I worked with the media team to create virtual tours and how-to videos 
+                for utilizing library services, and I contacted professors and students to act as a reference point if they had any questions about how to utilize 
+                any of the libraries at William and Mary.  Ensuring that people know how to best access and utilize the resources at their disposal is a passion of mine.
             </p>
         </section>
-        <section id="portfolio" class="body-background">
-            <img src="images/online-reputation-management.jpg" alt="Laptop with Reputation chart on screen" class="float-right" />
+
+        <div id="portfolio" class="projects"></div>
             <h2>Portfolio</h2>
-            <p>
-                <ul>
-                    <li>
-                        <a href="images/placeholder-image.png">Placeholder Project 1</a>
-                        <img src="images/placeholder-image.png" alt="Placeholder Image" />
-                        <!-- should this be homework assignment 1???˜ -->
-                    </li>
-                    <li>
-                        <a href="images/placeholder-image2.png">Placeholder Project 2</a>
-                        <img src="images/placeholder-image2.png" alt="Placeholder Image" />
-                    </li>
-                    <li>
-                        <a href="images/placeholder-image3.png">Placeholder Project 3</a>
-                        <img src="images/placeholder-image3.png" alt="Placeholder Image" />
-                    </li>
-                    <li>
-                        <a href="images/placeholder-image4.png">Placeholder Project 4</a>
-                        <img src="images/placeholder-image4.png" alt="Placeholder Image" />
-                    </li>
-                </ul>           
-            </p>
+            <section class="project" class="body-background">
+                <a href="images/placeholder-image.png">Placeholder Project 1</a>
+                <img src="images/placeholder-image.png" alt="Placeholder Image" /></img>
+                <!-- should this be homework assignment 1???˜ -->
+            </section>
+            <section class="project" class="body-background">
+                 <a href="images/placeholder-image2.png">Placeholder Project 2</a>
+                 <img src="images/placeholder-image2.png" alt="Placeholder Image" /></img>
+            </section>
+            <section class="project" class="body-background">
+                <a href="images/placeholder-image3.png">Placeholder Project 3</a>
+                <img src="images/placeholder-image3.png" alt="Placeholder Image" /></img>
+            </section>
+            <section class="project" class="body-background">
+                <a href="images/placeholder-image4.png">Placeholder Project 4</a>
+                <img src="images/placeholder-image4.png" alt="Placeholder Image" /></img>
+            </section>
         </section>
     </main>
 
