added more content to the portfolio section of index.html, cleaned up some parts of style.css

--- a/index.html
+++ b/index.html
@@ -41,24 +41,27 @@
 
         <div id="portfolio" class="projects"></div>
             <h2>Portfolio</h2>
-            <section class="project" class="body-background">
-                <a href="images/placeholder-image.png">Placeholder Project 1</a>
+            <section class="project">
+                <a href="images/placeholder-image.png">Password Generator</a>
                 <img src="images/placeholder-image.png" alt="Placeholder Image" /></img>
-                <!-- should this be homework assignment 1???˜ -->
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque aliquet.</p>
             </section>
-            <section class="project" class="body-background">
-                 <a href="images/placeholder-image2.png">Placeholder Project 2</a>
+            <section class="project">
+                 <a href="images/placeholder-image2.png">Day Planner</a>
                  <img src="images/placeholder-image2.png" alt="Placeholder Image" /></img>
-            </section>
-            <section class="project" class="body-background">
-                <a href="images/placeholder-image3.png">Placeholder Project 3</a>
+                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque aliquet.</p>
+                </section>
+            <section class="project">
+                <a href="images/placeholder-image3.png">Weather Dashboard</a>
                 <img src="images/placeholder-image3.png" alt="Placeholder Image" /></img>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque aliquet.</p>
             </section>
-            <section class="project" class="body-background">
-                <a href="images/placeholder-image4.png">Placeholder Project 4</a>
+            <section class="project">
+                <a href="images/placeholder-image4.png">Project 1</a>
                 <img src="images/placeholder-image4.png" alt="Placeholder Image" /></img>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque aliquet.</p>
             </section>
-        </section>
+        </div>
     </main>
 
 
