altered contact info color, clarified some classes in style.css and index.html

--- a/index.html
+++ b/index.html
@@ -23,15 +23,15 @@
 
     <main class="content">
         <section id="about-me" class="body-background">
-            <img src="images/catherine_headshot_sunken_garden.png" alt="Catherine Smith headshot in Sunken Gardens at William & Mary" class="float-left" class="profile-photo"/>
+            <img src="images/catherine_headshot_sunken_garden.png" alt="Catherine Smith headshot in Sunken Gardens at William & Mary" class="profile-photo"/>
             <h2>About Me</h2>
             <p>
                 My name is Catherine Smith, and I am an emerging full-stack web developer currently compeleted the University of Richmond's 
                 Coding Boot Camp. as well as a recent graduate of the MSc program in Information and Library Studies at the University of Strathclyde 
                 in Glasgow. I decided to become a web developer because it's a face-paced, challenging, creative career path with opportunites to grow as a person 
                 and professional.  
-
             </p>
+            <!-- how to add space here????? -->
             <p>  
                 While volunteering time as a Library Ambassador at Earl Gregg Swem Library, I worked with the media team to create virtual tours and how-to videos 
                 for utilizing library services, and I contacted professors and students to act as a reference point if they had any questions about how to utilize 
@@ -43,42 +43,42 @@
             <h2>Portfolio</h2>
             <section class="project">
                 <a href="images/placeholder-image.png">Password Generator</a>
-                <img src="images/placeholder-image.png" alt="Placeholder Image" /></img>
+                <img src="images/placeholder-image.png" alt="Placeholder Image"/></img>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque aliquet.</p>
             </section>
             <section class="project">
                  <a href="images/placeholder-image2.png">Day Planner</a>
-                 <img src="images/placeholder-image2.png" alt="Placeholder Image" /></img>
+                 <img src="images/placeholder-image2.png" alt="Placeholder Image"/></img>
                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque aliquet.</p>
                 </section>
             <section class="project">
                 <a href="images/placeholder-image3.png">Weather Dashboard</a>
-                <img src="images/placeholder-image3.png" alt="Placeholder Image" /></img>
+                <img src="images/placeholder-image3.png" alt="Placeholder Image"/></img>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque aliquet.</p>
             </section>
             <section class="project">
                 <a href="images/placeholder-image4.png">Project 1</a>
-                <img src="images/placeholder-image4.png" alt="Placeholder Image" /></img>
+                <img src="images/placeholder-image4.png" alt="Placeholder Image"/></img>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque aliquet.</p>
             </section>
         </div>
     </main>
 
+    <h1>Hori<span class="seo">seo</span>n</h1>
 
 
     <footer class="footer" id="contact">
         <h2>Contact Me</h2>
-        <ul> 
-            <!-- add in little emojis or something here to make it cuter/more interesting -->
-            <li>Phone: +1 (804) 929-7812</li>
-            <li>Email: catsmith24601@gmail.com</li>
-            <li>
+        <section></section>
+            <p><span class="contact-info"></span> +1 (804) 929-7812</p>
+            <p>Email: catsmith24601@gmail.com</p>
+            <p>
                 <a href="https://www.linkedin.com/in/catherine-smith-491b62206/">Linkedin</a>
-            </li>
-            <li>
+            </p>
+            <p>
                 <a href="https://github.com/crsmith01?tab=repositories">GitHub</a>
-            </li>
-        </ul>
+            </p>
+        </section>
     </footer>
 </body>
 
