cleaned up some classes

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <header class="header">
         <h1>Catherine Smith</h1>
         <!-- <nav class="float-right"> update with actual links  -->
-            <a href="#about-me">About Me</a>
-            <a href="#portfolio">Portfolio</a>
-            <a href="#contact">Contact</a>
+            <a class="nav-heading" href="#about-me">About Me</a>
+            <a class="nav-heading" href="#portfolio">Portfolio</a>
+            <a class="nav-heading" href="#contact">Contact</a>
         </nav>
     </header> 
 
@@ -41,7 +41,7 @@
 
         <div id="portfolio" class="projects"></div>
             <h2>Portfolio</h2>
-            <section class="project">
+            <section class="project" class="first-project">
                 <a href="images/placeholder-image.png">Password Generator</a>
                 <img src="images/placeholder-image.png" alt="Placeholder Image"/></img>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque aliquet.</p>
@@ -64,14 +64,11 @@
         </div>
     </main>
 
-    <h1>Hori<span class="seo">seo</span>n</h1>
-
-
     <footer class="footer" id="contact">
         <h2>Contact Me</h2>
         <section></section>
-            <p><span class="contact-info"></span> +1 (804) 929-7812</p>
-            <p>Email: catsmith24601@gmail.com</p>
+            <p>Phone:<span class="contact-info"></span> +1 (804) 929-7812</p>
+            <p>Email:<span class="contact-info"></span> catsmith24601@gmail.com</p>
             <p>
                 <a href="https://www.linkedin.com/in/catherine-smith-491b62206/">Linkedin</a>
             </p>
