changed placeholder images and corresponding links and alt texts

--- a/index.html
+++ b/index.html
@@ -42,23 +42,23 @@
         <div id="portfolio" class="projects"></div>
             <h2>Portfolio</h2>
             <section class="project" class="first-project">
-                <a href="images/placeholder-image.png">Password Generator</a>
-                <img src="images/placeholder-image.png" alt="Placeholder Image"/></img>
+                <a href="images/placeholder-image1.jpg">Password Generator</a>
+                <img src="images/placeholder-image1.jpg" alt="Placeholder Image of butterfly on plant"/></img>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque aliquet.</p>
             </section>
             <section class="project">
-                 <a href="images/placeholder-image2.png">Day Planner</a>
-                 <img src="images/placeholder-image2.png" alt="Placeholder Image"/></img>
+                 <a href="images/placeholder-image2.jpg">Day Planner</a>
+                 <img src="images/placeholder-image2.jpg" alt="Placeholder Image of orange tulips"/></img>
                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque aliquet.</p>
                 </section>
             <section class="project">
-                <a href="images/placeholder-image3.png">Weather Dashboard</a>
-                <img src="images/placeholder-image3.png" alt="Placeholder Image"/></img>
+                <a href="images/placeholder-image3.jpg">Weather Dashboard</a>
+                <img src="images/placeholder-image3.jpg" alt="Placeholder Image of forest and purple flowers"/></img>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque aliquet.</p>
             </section>
             <section class="project">
-                <a href="images/placeholder-image4.png">Project 1</a>
-                <img src="images/placeholder-image4.png" alt="Placeholder Image"/></img>
+                <a href="images/placeholder-image4.jpg">Project 1</a>
+                <img src="images/placeholder-image4.jpg" alt="Placeholder Image of Swiss mountains"/></img>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque aliquet.</p>
             </section>
         </div>
