modified style.css for nav bar

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <header class="header">
         <h1>Catherine Smith</h1>
         <!-- <nav class="float-right"> update with actual links  -->
+        <nav>
             <a class="nav-heading" href="#about-me">About Me</a>
             <a class="nav-heading" href="#portfolio">Portfolio</a>
             <a class="nav-heading" href="#contact">Contact</a>
@@ -29,13 +30,14 @@
                 My name is Catherine Smith, and I am an emerging full-stack web developer currently compeleted the University of Richmond's 
                 Coding Boot Camp. as well as a recent graduate of the MSc program in Information and Library Studies at the University of Strathclyde 
                 in Glasgow. I decided to become a web developer because it's a face-paced, challenging, creative career path with opportunites to grow as a person 
-                and professional.  
+                and professional. While volunteering time as a Library Ambassador at Earl Gregg Swem Library, I worked with the media team to create virtual tours and how-to videos 
+                for utilizing library services, and I contacted professors and students to act as a reference point if they had any questions about how to utilize 
+                any of the libraries at William and Mary.  Ensuring that people know how to best access and utilize the resources at their disposal is a passion of mine.
             </p>
             <!-- how to add space here????? -->
             <p>  
-                While volunteering time as a Library Ambassador at Earl Gregg Swem Library, I worked with the media team to create virtual tours and how-to videos 
-                for utilizing library services, and I contacted professors and students to act as a reference point if they had any questions about how to utilize 
-                any of the libraries at William and Mary.  Ensuring that people know how to best access and utilize the resources at their disposal is a passion of mine.
+                I enjoy studying new subjects, learning German and Polish, drinking tea, spending time with friends and family, watching LOTR, singing, baking, reading books, and 
+                listening to audiobooks (particularly if they are narrated by Richard Armitage, Elizabeth Wiley, Jim Dale, or Stephen Fry)!
             </p>
         </section>
 
@@ -53,7 +55,8 @@
                 </section>
             <section class="project">
                 <a href="images/placeholder-image3.jpg">Weather Dashboard</a>
-                <img src="images/placeholder-image3.jpg" alt="Placeholder Image of forest and purple flowers"/></img>
+                <img src="images/placeholder-image3.jpg" alt="Placeholder Image of forest and purple flowers"> <a href="images/placeholder-image3"></a></img>
+                <!-- trying to make it so that clicking on the image takes you to the application (or just to the image itself for now) -->
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque aliquet.</p>
             </section>
             <section class="project">
