added to reset.css, made images instead of headers links to deplpoyed apps

--- a/index.html
+++ b/index.html
@@ -44,24 +44,30 @@
         <div id="portfolio" class="projects"></div>
             <h2>Portfolio</h2>
             <section class="project" class="first-project">
-                <a href="images/placeholder-image1.jpg">Password Generator</a>
-                <img src="images/placeholder-image1.jpg" alt="Placeholder Image of butterfly on plant"/></img>
+                <h3>Password Generator</h3>
+                <a href="images/placeholder-image1.jpg">
+                    <img src="images/placeholder-image1.jpg" alt="Placeholder Image of butterfly on plant"/></img>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque aliquet.</p>
             </section>
             <section class="project">
-                 <a href="images/placeholder-image2.jpg">Day Planner</a>
-                 <img src="images/placeholder-image2.jpg" alt="Placeholder Image of orange tulips"/></img>
-                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque aliquet.</p>
+                <h3>Day Planner</h3>
+                 <a href="images/placeholder-image2.jpg">
+                    <img src="images/placeholder-image2.jpg" alt="Placeholder Image of orange tulips"/></img>
+                </a>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque aliquet.</p>
                 </section>
             <section class="project">
-                <a href="images/placeholder-image3.jpg">Weather Dashboard</a>
-                <img src="images/placeholder-image3.jpg" alt="Placeholder Image of forest and purple flowers"> <a href="images/placeholder-image3"></a></img>
-                <!-- trying to make it so that clicking on the image takes you to the application (or just to the image itself for now) -->
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque aliquet.</p>
+                <h3>Weather Dashboard</h3>
+                <a href="images/placeholder-image3.jpg">
+                    <img src="images/placeholder-image3.jpg" alt="Placeholder Image of forest and purple flowers"> <a href="images/placeholder-image3"></a></img>
+                </a>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque aliquet.</p>
             </section>
             <section class="project">
-                <a href="images/placeholder-image4.jpg">Project 1</a>
-                <img src="images/placeholder-image4.jpg" alt="Placeholder Image of Swiss mountains"/></img>
+                <h3>Project 1</h3>
+                <a href="images/placeholder-image4.jpg">
+                    <img src="images/placeholder-image4.jpg" alt="Placeholder Image of Swiss mountains"/></img>
+                </a>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque aliquet.</p>
             </section>
         </div>
