attempted to clean up flexboxes, made css more dry

--- a/index.html
+++ b/index.html
@@ -12,15 +12,12 @@
 <body>
     <header class="header">
         <h1>Catherine Smith</h1>
-        <!-- <nav class="float-right"> update with actual links  -->
         <nav>
-            <a class="nav-heading" href="#about-me">About Me</a>
-            <a class="nav-heading" href="#portfolio">Portfolio</a>
-            <a class="nav-heading" href="#contact">Contact</a>
+            <a href="#about-me">About Me</a>
+            <a href="#portfolio">Portfolio</a>
+            <a href="#contact">Contact</a>
         </nav>
     </header> 
-
-    <div class="hero"></div>
 
     <main class="content">
         <section id="about-me" class="body-background">
@@ -47,6 +44,7 @@
                 <h3>Password Generator</h3>
                 <a href="images/placeholder-image1.jpg">
                     <img src="images/placeholder-image1.jpg" alt="Placeholder Image of butterfly on plant"/></img>
+                </a>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque aliquet.</p>
             </section>
             <section class="project">
@@ -59,7 +57,7 @@
             <section class="project">
                 <h3>Weather Dashboard</h3>
                 <a href="images/placeholder-image3.jpg">
-                    <img src="images/placeholder-image3.jpg" alt="Placeholder Image of forest and purple flowers"> <a href="images/placeholder-image3"></a></img>
+                    <img src="images/placeholder-image3.jpg" alt="Placeholder Image of forest and purple flowers"></img>
                 </a>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque aliquet.</p>
             </section>
