--- a/index.html
+++ b/index.html
@@ -19,52 +19,50 @@
         </nav>
     </header> 
 
+    <div></div>
+
     <main class="content">
-        <section id="about-me" class="body-background">
-            <img src="images/catherine_headshot_sunken_garden.png" alt="Catherine Smith headshot in Sunken Gardens at William & Mary" class="profile-photo"/>
+        <section id="about-me">
             <h2>About Me</h2>
-            <p>
+            <img src="images/catherine_headshot_sunken_garden.png" alt="Catherine Smith headshot in Sunken Gardens at William & Mary" class="profile-photo"/>
+            <p class="about">
                 My name is Catherine Smith, and I am an emerging full-stack web developer currently compeleted the University of Richmond's 
                 Coding Boot Camp. as well as a recent graduate of the MSc program in Information and Library Studies at the University of Strathclyde 
                 in Glasgow. I decided to become a web developer because it's a face-paced, challenging, creative career path with opportunites to grow as a person 
                 and professional. While volunteering time as a Library Ambassador at Earl Gregg Swem Library, I worked with the media team to create virtual tours and how-to videos 
                 for utilizing library services, and I contacted professors and students to act as a reference point if they had any questions about how to utilize 
-                any of the libraries at William and Mary.  Ensuring that people know how to best access and utilize the resources at their disposal is a passion of mine.
-            </p>
-            <!-- how to add space here????? -->
-            <p>  
-                I enjoy studying new subjects, learning German and Polish, drinking tea, spending time with friends and family, watching LOTR, singing, baking, reading books, and 
+                any of the libraries at William and Mary.  Ensuring that people know how to best access and utilize the resources at their disposal is a passion of mine.  I enjoy studying new subjects, learning German and Polish, drinking tea, spending time with friends and family, watching LOTR, singing, baking, reading books, and 
                 listening to audiobooks (particularly if they are narrated by Richard Armitage, Elizabeth Wiley, Jim Dale, or Stephen Fry)!
             </p>
         </section>
 
         <div id="portfolio" class="projects"></div>
             <h2>Portfolio</h2>
-            <section class="project" class="first-project">
+            <section class="project">
                 <h3>Password Generator</h3>
                 <a href="images/placeholder-image1.jpg">
-                    <img src="images/placeholder-image1.jpg" alt="Placeholder Image of butterfly on plant"/></img>
+                    <img src="images/placeholder-image1.jpg" alt="Placeholder Image of butterfly on plant" class="first-project"/>
                 </a>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque aliquet.</p>
             </section>
             <section class="project">
                 <h3>Day Planner</h3>
                  <a href="images/placeholder-image2.jpg">
-                    <img src="images/placeholder-image2.jpg" alt="Placeholder Image of orange tulips"/></img>
+                    <img src="images/placeholder-image2.jpg" alt="Placeholder Image of orange tulips"/>
                 </a>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque aliquet.</p>
                 </section>
             <section class="project">
                 <h3>Weather Dashboard</h3>
                 <a href="images/placeholder-image3.jpg">
-                    <img src="images/placeholder-image3.jpg" alt="Placeholder Image of forest and purple flowers"></img>
+                    <img src="images/placeholder-image3.jpg" alt="Placeholder Image of forest and purple flowers">
                 </a>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque aliquet.</p>
             </section>
             <section class="project">
                 <h3>Project 1</h3>
                 <a href="images/placeholder-image4.jpg">
-                    <img src="images/placeholder-image4.jpg" alt="Placeholder Image of Swiss mountains"/></img>
+                    <img src="images/placeholder-image4.jpg" alt="Placeholder Image of Swiss mountains"/>
                 </a>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque aliquet.</p>
             </section>
@@ -74,8 +72,8 @@
     <footer class="footer" id="contact">
         <h2>Contact Me</h2>
         <section></section>
-            <p>Phone:<span class="contact-info"></span> +1 (804) 929-7812</p>
-            <p>Email:<span class="contact-info"></span> catsmith24601@gmail.com</p>
+            <p><span class="contact-info">Phone:</span> +1 (804) 929-7812</p>
+            <p><span class="contact-info">Email:</span> catsmith24601@gmail.com</p>
             <p>
                 <a href="https://www.linkedin.com/in/catherine-smith-491b62206/">Linkedin</a>
             </p>
