added screenshots of finished portfolio at this stage, updated README.md to include screenshots and more notes

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
     <div></div>
 
     <main class="content">
-        <section id="about-me">
+        <section id="about-me" class="float-keep-left">
             <h2>About Me</h2>
-            <img src="images/catherine_headshot_sunken_garden.png" alt="Catherine Smith headshot in Sunken Gardens at William & Mary" class="profile-photo"/>
-            <p class="about">
+            <img src="images/catherine_headshot_sunken_garden.png" alt="Catherine Smith headshot in Sunken Gardens at William & Mary" class="profile-photo" class="float-keep-left"/>
+            <p>
                 My name is Catherine Smith, and I am an emerging full-stack web developer currently compeleted the University of Richmond's 
                 Coding Boot Camp. as well as a recent graduate of the MSc program in Information and Library Studies at the University of Strathclyde 
                 in Glasgow. I decided to become a web developer because it's a face-paced, challenging, creative career path with opportunites to grow as a person 
